Criação do Controller Clients

--- a/DevWeb_Trab_Final/appsettings.json
+++ b/DevWeb_Trab_Final/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevWeb_Trab_FinalContext": "Server=(localdb)\\mssqllocaldb;Database=DevWeb_Trab_FinalContext-524bec59-795b-443f-95fa-6d3011691451;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
